# gzen-money

./: .anjuta_sym_db.db  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  dbus_server.c  dbus_server.vala  dbus_server.vala~  gzen_money  gzen_money.c  gzen_money.ui  gzen_money.vala  gzen_money.vala~  oauth-zenmoney.c  oauth-zenmoney.vala  oauth-zenmoney.vala~  oauth.c  oauth.vala  oauth.vala~  zenmoney.c  zenmoney.vala  zenmoney.vala~
src/.deps/: dbus_server.Po  gzen_money.Po  oauth-zenmoney.Po  oauth.Po  zenmoney.Po
